# magic-the-gathering-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
astro/: Dockerfile  dbt-requirements.txt  requirements.txt
astro/.astro/: config.yaml
astro/dags/: bronze_ingestion.py  gold_ingestion.py  raw_ingestion.py  silver_ingestion.py
astro/dags/dbt/magic_the_gathering/: .gitignore  dbt_project.yml  profiles.yml
astro/dags/dbt/magic_the_gathering/macros/: export_cards_data.sql
astro/dags/dbt/magic_the_gathering/models/core/: fact_cards.sql
astro/dags/dbt/magic_the_gathering/models/staging/: schema.yml  sources.yml  stg_cards.sql
astro/include/ingestion/bronze/: cards.py
astro/include/ingestion/raw/: cards.py
astro/include/ingestion/silver/: cards.py
astro/include/lib/: aws_manager.py  duckdb_manager.py  motherduck_manager.py
astro/include/models/: all_parts.py  card.py  legalities.py  purchase_uris.py
dbt/magic_the_gathering/: .user.yml  dbt_project.yml  profiles.yml
dbt/magic_the_gathering/macros/: export_cards_data.sql
dbt/magic_the_gathering/models/core/: fact_cards.sql
dbt/magic_the_gathering/models/staging/: schema.yml  stg_cards.sql
docs/: info_dataset.md
ingestion/bronze/: cards.py
ingestion/raw/: cards.py
ingestion/silver/: cards.py
lib/: aws_manager.py  duckdb_manager.py  motherduck_manager.py
models/: all_parts.py  card.py  image_uris.py  legalities.py  prices.py  purchase_uris.py  related_uris.py
terraform/: main.tf  s3_bucket.tf  variables.tf
